--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -31,7 +31,13 @@ jobs:
 
       - run: brew test-bot --only-setup
 
-      - run: brew test-bot --only-tap-syntax
+      # Will fail with:
+      # ```
+      # Formula aspect-cli-pro contains non-standard SPDX licenses: ["https://www.aspect.build/communitylicense"].
+      # For a list of valid licenses check: https://spdx.org/licenses/
+      # ```
+      # since we don't use an SPDX license on the Aspect CLI Pro
+      # - run: brew test-bot --only-tap-syntax
 
       - run: brew test-bot --only-formulae
         if: github.event_name == 'pull_request'
